# rms-nav

./: .coveragerc  .flake8  .gitignore  .mypy.ini  CONTRIBUTING.md  README.md  my_config.yaml  pyproject.toml  requirements.txt  setup.cfg
.cursor/rules/: bug_report.mdc  documentation.mdc  environment_best_practices.mdc  git_workflow.mdc  how_to.mdc  javascript_typescript_best_practices.mdc  pull_request.mdc  python_best_practices.mdc
.cursor/skills/codebase-analysis/: SKILL.md  reference.md
.github/workflows/: publish_to_pypi.yml  publish_to_test_pypi.yml  run-tests.yml
docs/: api_reference.rst  building_docs.rst  conf.py  contributing.rst  developer_guide.rst  developer_guide_backplanes.rst  developer_guide_best_practices.rst  developer_guide_building_docs.rst  developer_guide_class_hierarchy.rst  developer_guide_configuration.rst  developer_guide_extending.rst  developer_guide_introduction.rst  index.rst  introduction.rst  introduction_configuration.rst  introduction_overview.rst  user_guide.rst  user_guide_appendix_coiss.rst  user_guide_appendix_gossi.rst  user_guide_appendix_nhlorri.rst  user_guide_appendix_vgiss.rst  user_guide_backplanes.rst  user_guide_configuration.rst  user_guide_navigation.rst  user_guide_pds4_bundle.rst  user_guide_simulated_images.rst
docs/_static/: custom.css
docs/_templates/: localtoc.html
docs/api_reference/: api_annotation.rst  api_config.rst  api_dataset.rst  api_nav_master.rst  api_nav_model.rst  api_nav_technique.rst  api_navigate_image_files.rst  api_obs.rst  api_sim.rst  api_support.rst  api_ui.rst
experiments/: nav_master1.py  nav_model_body1.py  nav_model_stars1.py  star_distortion.py
experiments/backplanes/: simulated_body_params.json  smoke_backplanes_sim.py
experiments/correlation/: check_corr_offset.py  sweep_upsample_factor.py
experiments/create_simulated_body/: README.md  sim_body_gui.py
experiments/fov_twist/: coiss_nac_full_list.txt  coiss_wac_full_list.txt  find_fov_twist.py  gossi_full_list.txt  nhlorri_full_list.txt  nhlorri_full_list_KE.txt
experiments/fov_twist/config/: coiss_nac_full.config  coiss_wac_full.config  nhlorri_ke.config  nhlorri_pre_ke.config  vg1iss_nac.config  vg1iss_nac_possible.config  vg1iss_wac.config  vg2iss_nac.config  vg2iss_wac.config  vg2iss_wac_possible.config
experiments/fov_twist/fov_twist_results/: COISS_NAC_SHORT_results.txt  COISS_NAC_results.txt  COISS_NAC_results_edited.csv  COISS_WAC_results.txt  gossi_full_results.txt
experiments/offset_sensitivity/: README.md  analyze_offset_results.py  generate_offset_tasks.py
main/: create_simulated_body_model.py  nav_backplane_viewer.py  nav_create_simulated_image.py  nav_create_simulated_model.py  nav_main_backplanes.py  nav_main_backplanes_cloud_tasks.py  nav_main_offset.py  nav_main_offset_cloud_tasks.py  nav_offset.py  nav_offset_cloud_tasks.py
nav/: __init__.py  _version.py  navigate_image_files.py  process.py  test.py
nav/annotation/: __init__.py  annotation.py  annotation_text_info.py  annotations.py  text_info.py
nav/backplanes/: backplanes.py  backplanes_bodies.py  backplanes_rings.py  merge.py  writer.py
nav/backplanes/templates/: backplanes.lblx
nav/config/: __init__.py  config.py  default_config.yaml  global_config.py  logger.py
nav/config_files/: config_01_settings.yaml  config_10_satellites.yaml  config_20_saturn_rings.yaml  config_30_coiss.yaml  config_31_gossi.yaml  config_32_nhlorri.yaml  config_33_vgiss.yaml  config_40_sim.yaml  config_90_backplanes.yaml
nav/dataset/: __init__.py  dataset.py  dataset_cassini_iss.py  dataset_galileo_ssi.py  dataset_newhorizons_lorri.py  dataset_pds3.py  dataset_pds3_cassini_iss.py  dataset_pds3_galileo_ssi.py  dataset_pds3_newhorizons_lorri.py  dataset_pds3_voyager_iss.py  dataset_pds4.py  dataset_voyager_iss.py  test_dataset_cassini_iss.py  test_dataset_voyager_iss.py
nav/inst/: __init__.py  inst.py  inst_cassini_iss.py  inst_galileo_ssi.py  inst_newhorizons_lorri.py  inst_voyager_iss.py
nav/nav_master/: nav_master.py
nav/nav_model/: __init__.py  nav_model.py  nav_model_body.py  nav_model_body_base.py  nav_model_body_simulated.py  nav_model_combined.py  nav_model_rings.py  nav_model_stars copy.py  nav_model_stars.py  nav_model_titan.py
nav/nav_technique/: __init__.py  nav_technique.py  nav_technique_all_models.py  nav_technique_correlate_all.py  nav_technique_correlation.py  nav_technique_manual.py  nav_technique_stars.py  nav_technique_titan.py
nav/obs/: __init__.py  obs.py  obs_cassini_iss.py  obs_galileo_ssi.py  obs_inst.py  obs_inst_cassini_iss.py  obs_inst_galileo_ssi.py  obs_inst_newhorizons_lorri.py  obs_inst_sim.py  obs_inst_voyager_iss.py  obs_newhorizons_lorri.py  obs_snapshot.py  obs_snapshot_inst.py  obs_voyager_iss.py
nav/sim/: __init__.py  render.py
nav/support/: attrdict.py  constants.py  correlate.py  file.py  flux.py  image.py  misc.py  nav_base.py  new_correlate.py  sim.py  time.py  types.py
nav/ui/: common.py  manual_nav_dialog.py
nav/util/: correlate.py  file.py  image.py  misc.py  types.py
scripts/: run-all-checks.sh
src/backplanes/: __init__.py  backplanes.py  backplanes_bodies.py  backplanes_rings.py  merge.py  writer.py
src/experiments/: nav_master1.py  nav_model_body1.py  nav_model_stars1.py
src/experiments/backplanes/: smoke_backplanes_sim.py
src/experiments/correlation/: check_corr_offset.py  sweep_upsample_factor.py  upsampled_dft.py
src/experiments/fov_twist/: find_fov_twist.py
src/experiments/offset_sensitivity/: README.md  analyze_offset_results.py  generate_offset_tasks.py
src/main/: nav_backplane_viewer.py  nav_backplanes.py  nav_backplanes_cloud_tasks.py  nav_create_bundle.py  nav_create_bundle_cloud_tasks.py  nav_create_simulated_image.py  nav_offset.py  nav_offset_cloud_tasks.py
src/nav/: _version.py  navigate_image_files.py
src/nav/annotation/: __init__.py  annotation.py  annotation_text_info.py  annotations.py
src/pds4/: __init__.py  backplane_summary.py  bundle_data.py  collections.py  data.py
src/util/: report_profile.py
tests/: config.py  conftest.py
util/: report_profile.py
(+108 files in other folders)
