[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "rms-nav"
dynamic = ["version"]
description = "Navigation system for spacecraft imagery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "numpy>=2.2.0",
  "PyQt6",
  "rms-cloud_tasks>=0.1.2",
  "rms-filecache>=3.0.0",
  "rms-imgdisp",
  "rms-julian>=3.0.1",
  "rms-pdslogger>=3.2.1",
  "rms-pdstable>=1.0.1",
  "rms-pdstemplate>=2.3.0",
  "rms-psfmodel",
  "rms-oops>=0.1.3",
  "rms-starcat>=1.0.1",
  "ruamel.yaml",
  "scipy"
]
license = {text = "Apache-2.0"}
maintainers = [
  {name = "Robert S. French", email = "rfrench@seti.org"}
]
keywords = ["Voyager", "Galileo", "New Horizons", "Cassini", "image navigation", "spice"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows"
]

[project.urls]
Homepage = "https://github.com/SETI/rms-nav"
Documentation = "https://rms-nav.readthedocs.io/en/latest"
Repository = "https://github.com/SETI/rms-nav"
Source = "https://github.com/SETI/rms-nav"
Issues = "https://github.com/SETI/rms-nav/issues"

[tool.mypy]
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
src = ["src", "tests"]
extend-exclude = ["src/experiments", "src/nav/support/correlate_old.py"]
line-length = 100

[tool.ruff.lint]
# Explicit rule set (recommended for library projects). Categories:
# E, W = pycodestyle errors/warnings; F = Pyflakes; I = isort; UP = pyupgrade;
# B = bugbear; SIM = simplify; C4 = comprehensions; A = builtins (no shadowing);
# N = pep8-naming; PT = pytest-style; RUF = Ruff-specific (e.g. unused noqa).
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "A", "N", "PT", "RUF"]
# N802 - Function name should be lowercase.
# N803 - Argument name should be lowercase.
# N806 - Variable name should be lowercase.
# PT011 - pytest.raises is too broad.
# SIM105 - Use contextlib.suppress for suppressions.
# SIM108 - Use ternary operator for simple if/else.
extend-ignore = ["N802", "N803", "N806", "PT011", "SIM105", "SIM108"]


[tool.ruff.lint.per-file-ignores]
# Entry-point scripts add package to path before importing nav
"src/main/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
order-by-type = true

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nav" = ["py.typed"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/nav/_version.py"

[project.scripts]
nav_offset = "main.nav_offset:main"
nav_offset_cloud_tasks = "main.nav_offset_cloud_tasks:main"
nav_create_simulated_image = "main.nav_create_simulated_image:main"
nav_backplanes = "main.nav_backplanes:main"
nav_backplanes_cloud_tasks = "main.nav_backplanes_cloud_tasks:main"
nav_backplane_viewer = "main.nav_backplane_viewer:main"
nav_create_bundle = "main.nav_create_bundle:main"
nav_create_bundle_cloud_tasks = "main.nav_create_bundle_cloud_tasks:main"
